--- a/bundle.css
+++ b/bundle.css
@@ -14,20 +14,18 @@ Button {
   background-size: cover;
   background-position: center; }
 
-.logo-container {
-  horizontal-align: center;
-  height: 80; }
-
 .initial-container {
-  margin-top: 250; }
+  margin-top: 170; }
+
+.initial-logo {
+  horizontal-align: center;
+  margin-bottom: 10; }
 
 .initial-label {
   color: white;
   horizontal-align: center;
   margin-bottom: 80;
   font-size: 36;
-  letter-spacing: 0.2;
-  font-size: 40;
   letter-spacing: 0.2; }
 
 .initial-button {
@@ -42,26 +40,15 @@ Button {
   font-weight: bold; }
 
 .main-container {
+  visibility: collapse;
+  opacity: 0;
   margin-left: 30;
   margin-right: 30;
-  background-color: white;
-  opacity: 0;
-  height: 425;
-  width: 300; }
+  background-color: white; }
 
 .main-label {
   horizontal-align: center;
-  color: black;
-  color: #311217;
-  font-size: 32;
-  margin-top: 45;
-  margin-bottom: 52;
-  letter-spacing: 0.2; }
-
-/* Hide a bunch of things to setup the initial animations */
-.form-controls,
-.sign-up-stack {
-  opacity: 0; }
+  color: black; }
 
 image {
   margin-top: 5;
@@ -75,21 +62,16 @@ text-field {
 
 text-field {
   color: black;
-  placeholder-color: #ACA6A7;
-  border-width: 1;
-  border-color: #6E595C;
-  margin-bottom: 20; }
+  placeholder-color: #ACA6A7; }
 
 text-field.light {
   color: #C4AFB4;
-  placeholder-color: #C4AFB4;
-  border-color: #C4AFB4; }
+  placeholder-color: #C4AFB4; }
 
 .submit-button {
   background-color: #CB1D00;
   color: white;
-  height: 40;
-  margin-top: 15; }
+  margin-top: 20; }
 
 .forgot-password-label {
   font-size: 13;
@@ -103,32 +85,12 @@ text-field.light {
 .sign-up-stack Label {
   color: white;
   horizontal-align: center;
-  font-size: 15;
-  height: 48; }
-
-Page {
   font-size: 15; }
 
-.list-page {
-  background-image: url("res://bg_inner");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; }
+.logo-container {
+  visibility: collapse;
+  horizontal-align: center;
+  opacity: 0; }
 
-ActionBar {
-  background-color: black;
-  color: white; }
-
-TextField {
-  padding: 10;
-  font-size: 13; }
-
-.line-through {
-  text-decoration: line-through; }
-
-Page {
+page {
   margin-top: -20; }
-
-TextField {
-  border-width: 1;
-  border-color: black; }
