--- a/tns/app/app.css
+++ b/tns/app/app.css
@@ -54,6 +54,52 @@
     horizontal-align: center;
     vertical-align: center; }
 
+list-view {
+  background-color: transparent;
+  opacity: 0; }
+  list-view.visible {
+    animation-name: show;
+    animation-duration: 1s;
+    animation-fill-mode: forwards; }
+
+@keyframes show {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+.platform-android .item-container {
+  margin-top: 1; }
+
+.item-container {
+  background-color: white; }
+  .item-container .visible {
+    animation-name: show;
+    animation-duration: 1s;
+    animation-fill-mode: forwards; }
+  .item-container .tap-target {
+    padding-top: 13;
+    padding-bottom: 13;
+    padding-left: 16; }
+    .item-container .tap-target label {
+      min-width: 200; }
+  .item-container .check-box {
+    margin-right: 10;
+    height: 20; }
+  .item-container .delete-container {
+    padding: 10 15;
+    vertical-align: middle; }
+    .item-container .delete-container image {
+      height: 20; }
+    .item-container .delete-container stack-layout {
+      padding: 5; }
+
+@keyframes show {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .login .background {
   background-image: url("res://bg_login");
   background-repeat: no-repeat;
