Code review and beautification. Added README.md file.

--- a/app/app.css
+++ b/app/app.css
@@ -2,7 +2,7 @@ page {
     font-size: 15;
 }
 
-page.hidden-action-bar.platform-ios {
+page.platform-ios {
     margin-top: -20;
 }
 
@@ -26,4 +26,3 @@ text-field {
 .line-through {
     text-decoration: line-through;
 }
-
